# pAttrRecognition

./: .gitignore  CMakeLists.txt  LICENSE  README.md  affineGridLayer.cu  affineGridLayer.h  main.cpp  maxLayer.cu  maxLayer.h
